--- a/haohuo-service/haohuo-service-mall/pom.xml
+++ b/haohuo-service/haohuo-service-mall/pom.xml
@@ -28,6 +28,17 @@
             <artifactId>haohuo-service-mall-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- mybatis-plus       -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 
 
