--- a/haohuo-service/pom.xml
+++ b/haohuo-service/pom.xml
@@ -31,6 +31,12 @@
             <groupId>com.ebanma.cloud</groupId>
             <artifactId>haohuo-common-db</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>tk.mybatis</groupId>
+                    <artifactId>mapper-spring-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
