--- a/haohuo-gateway-app/src/main/resources/application.properties
+++ b/haohuo-gateway-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=29110
+server.port=26745
 
 # 服务名称
-spring.application.name=newbee-mall-cloud-gateway-mall
+spring.application.name=haohuo-gateway
 # Nacos地址
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 # Nacos登录用户名(默认为nacos，生产环境一定要修改)
@@ -13,10 +13,10 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # 用户服务的路由配置
-spring.cloud.gateway.routes[0].id=user-service-route
-spring.cloud.gateway.routes[0].uri=lb://newbee-mall-cloud-user-service
+spring.cloud.gateway.routes[0].id=haohuo-user
+spring.cloud.gateway.routes[0].uri=lb://haohuo-user
 spring.cloud.gateway.routes[0].order=1
-spring.cloud.gateway.routes[0].predicates[0]=Path=/users/mall/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/haohuo-user/**
 
 # 首页接口的路由配置
 spring.cloud.gateway.routes[1].id=recommend-service-route
