--- a/haohuo-service/haohuo-service-user/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-user/src/main/resources/application.yml
@@ -2,4 +2,10 @@ server:
   port: 8081
 spring:
   application:
-    name: user-service
+    name: haohuo-user
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+      username: nacos
+      password: nacos
