--- a/haohuo-service/haohuo-service-mall/pom.xml
+++ b/haohuo-service/haohuo-service-mall/pom.xml
@@ -39,6 +39,26 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!--        fastDFS-->
+        <!--分布式文件存储  fastDFS-->
+        <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+            <version>1.26.2</version>
+        </dependency>
+
+        <!--上传下载 间接包-->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
     </dependencies>
 
 
