--- a/haohuo-service/haohuo-service-order/pom.xml
+++ b/haohuo-service/haohuo-service-order/pom.xml
@@ -10,5 +10,12 @@
     </parent>
 
     <artifactId>haohuo-service-order</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+    </dependencies>
 
 </project>
