--- a/haohuo-common-db/src/main/resources/application-dev.properties
+++ b/haohuo-common-db/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/haohuo?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=zl11513921
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.configration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
