--- a/haohuo-common-db/src/main/resources/application-dev.properties
+++ b/haohuo-common-db/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/haohuo
+spring.datasource.url=jdbc:mysql://localhost:3306/haohuo?useUnicode=true&characterEncoding=utf-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=zl11513921
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
