--- a/haohuo-common-db/src/main/resources/application-dev.properties
+++ b/haohuo-common-db/src/main/resources/application-dev.properties
@@ -2,7 +2,8 @@
 # 数据源配置，请修改为你项目的实际配置
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/haohuo
-spring.datasource.url=jdbc:mysql://localhost:3306/haohuo?useUnicode=true&characterEncoding=utf-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/haohuo?useUnicode=true&characterEncoding=utf-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://30.16.95.144:3306/erzu-liuchengdong?useUnicode=true&characterEncoding=utf-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=zl11513921
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
