创建程序结构

--- a/pom.xml
+++ b/pom.xml
@@ -114,11 +114,11 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>central</id>
-            <url>https://maven.aliyun.com/repository/central</url>
-            <name>aliyun</name>
-        </repository>
-    </repositories>
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>central</id>-->
+<!--            <url>https://maven.aliyun.com/repository/central</url>-->
+<!--            <name>aliyun</name>-->
+<!--        </repository>-->
+<!--    </repositories>-->
 </project>
