--- a/haohuo-service/haohuo-service-mall/pom.xml
+++ b/haohuo-service/haohuo-service-mall/pom.xml
@@ -59,6 +59,18 @@
             <version>1.3.2</version>
         </dependency>
 
+        <!-- Hutool相关 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.8</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+            <version>5.8.5</version>
+        </dependency>
+
     </dependencies>
 
 
