--- a/haohuo-service/haohuo-service-user/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-user/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 spring:
   application:
     name: haohuo-user
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: 127.0.0.1:8848
-#      username: nacos
-#      password: nacos
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+      username: nacos
+      password: nacos
