--- a/haohuo-service/haohuo-service-mall/pom.xml
+++ b/haohuo-service/haohuo-service-mall/pom.xml
@@ -33,6 +33,12 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.3.1</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jsqlparser</artifactId>
+                    <groupId>com.github.jsqlparser</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -70,6 +76,12 @@
             <artifactId>hutool-core</artifactId>
             <version>5.8.5</version>
         </dependency>
+        <!-- Mybatis分页插件 -->
+<!--        <dependency>-->
+<!--            <groupId>com.github.pagehelper</groupId>-->
+<!--            <artifactId>pagehelper-spring-boot-starter</artifactId>-->
+<!--            <version>1.4.5</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
