--- a/haohuo-service/haohuo-service-user/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-user/src/main/resources/application.yml
@@ -9,5 +9,6 @@ spring:
         server-addr: 127.0.0.1:8848
       username: nacos
       password: nacos
-
+mybatis:
+  mapper-locations: mapper/*.xml
 
