--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <spring.cloud.dependencies.version>2021.0.1</spring.cloud.dependencies.version>
         <spring.cloud.alibaba.version>2021.0.1.0</spring.cloud.alibaba.version>
         <mybatis.starter.version>2.2.2</mybatis.starter.version>
+        <redissonn.version>3.15.6</redissonn.version>
         <swagger.version>3.0.0</swagger.version>
         <lombok.version>1.18.16</lombok.version>
         <java.version>1.8</java.version>
@@ -90,6 +91,12 @@
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>${redissonn.version}</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
@@ -114,11 +121,11 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>central</id>
-            <url>https://maven.aliyun.com/repository/central</url>
-            <name>aliyun</name>
-        </repository>
-    </repositories>
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>central</id>-->
+<!--            <url>https://maven.aliyun.com/repository/central</url>-->
+<!--            <name>aliyun</name>-->
+<!--        </repository>-->
+<!--    </repositories>-->
 </project>
