--- a/haohuo-service/haohuo-service-mall/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-mall/src/main/resources/application.yml
@@ -3,12 +3,12 @@ server:
 spring:
   application:
     name: mall-service
-  datasource:
-    druid:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://30.16.95.144/yizu-duyumeng?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
-      username: root
-      password: root
+#  datasource:
+#    druid:
+#      driver-class-name: com.mysql.cj.jdbc.Driver
+#      url: jdbc:mysql://30.16.95.144/yizu-duyumeng?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
+#      username: root
+#      password: root
 mybatis-plus:
   mapper-locations: classpath:/mapper/*.xml
   configuration:
