调用商品服务

--- a/haohuo-service/haohuo-service-mall/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-mall/src/main/resources/application.yml
@@ -3,6 +3,12 @@ server:
 spring:
   application:
     name: mall-service
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 30.16.95.140:8848
+      username: nacos
+      password: nacos
 #  datasource:
 #    druid:
 #      driver-class-name: com.mysql.cj.jdbc.Driver
