--- a/haohuo-service/pom.xml
+++ b/haohuo-service/pom.xml
@@ -31,12 +31,12 @@
             <groupId>com.ebanma.cloud</groupId>
             <artifactId>haohuo-common-db</artifactId>
             <version>1.0-SNAPSHOT</version>
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <groupId>tk.mybatis</groupId>-->
-<!--                    <artifactId>mapper-spring-boot-starter</artifactId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
+            <exclusions>
+                <exclusion>
+                    <groupId>tk.mybatis</groupId>
+                    <artifactId>mapper-spring-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.ebanma.cloud</groupId>
@@ -47,11 +47,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
