--- a/haohuo-service/haohuo-service-mall/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-mall/src/main/resources/application.yml
@@ -6,9 +6,11 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://30.16.95.144/yizu-duyumeng?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
+      url: jdbc:mysql://127.0.0.1/yizu-duyumeng?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
       username: root
-      password: root
+      password: mysql
+#      url: jdbc:mysql://30.16.95.144/yizu-duyumeng?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
+
 mybatis-plus:
   mapper-locations: classpath:/mapper/*.xml
   configuration:
