feature:账务增减简单测试OK，userId为虚拟001.账务查看还差红包部分修改bug

--- a/haohuo-service/haohuo-service-trans/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-trans/src/main/resources/application.yml
@@ -3,3 +3,9 @@ server:
 spring:
   application:
     name: trans-service
+mybatis:
+  mapper-locations: mapper/*.xml
+
+logging:
+  level:
+    com.ebanma.cloud.trans.dao: debug
