--- a/haohuo-service/haohuo-service-trans/pom.xml
+++ b/haohuo-service/haohuo-service-trans/pom.xml
@@ -11,4 +11,17 @@
 
     <artifactId>haohuo-service-trans</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
