--- a/haohuo-common-file/src/main/resources/application.yml
+++ b/haohuo-common-file/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
     nacos:
       discovery:
         server-addr: 30.16.95.140:8848
+        group: 85ab69de-640b-4bb6-b62e-59d4bbcd7d93
       username: nacos
       password: nacos
 
