--- a/haohuo-gateway-app/src/main/resources/application.properties
+++ b/haohuo-gateway-app/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.cloud.nacos.discovery.server-addr=30.16.95.144:8848
 spring.cloud.nacos.username=nacos
 # Nacos登录密码(默认为nacos，生产环境一定要修改)
 spring.cloud.nacos.password=nacos
+spring.cloud.nacos.discovery.group=85ab69de-640b-4bb6-b62e-59d4bbcd7d93
 # 网关开启服务注册与服务发现
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
