--- a/haohuo-service/haohuo-service-game/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-game/src/main/resources/application.yml
@@ -3,6 +3,13 @@ server:
 spring:
   application:
     name: game-service
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 30.16.95.140:8848
+        group: 85ab69de-640b-4bb6-b62e-59d4bbcd7d93
+      username: nacos
+      password: nacos
 
 mybatis:
   mapper-locations: mapper/*.xml
