--- a/haohuo-service/haohuo-service-post/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-post/src/main/resources/application.yml
@@ -3,7 +3,13 @@ server:
 spring:
   application:
     name: post-service
-<<<<<<< HEAD
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 30.16.95.140:8848
+        group: 85ab69de-640b-4bb6-b62e-59d4bbcd7d93
+      username: nacos
+      password: nacos
   jackson:
     default-property-inclusion: non_empty
   servlet:
@@ -14,18 +20,12 @@ spring:
     url: jdbc:mysql://30.16.95.144:3306/yizu-duyumeng?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&useSSL=true&serverTimezone=GMT%2B8
     username: root
     password: root
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: http://30.16.95.140:8848
 mybatis-plus:
   mapper-locations: com/ebanma/cloud/post/dao/*.xml
   configuration:
     #这个配置会将执行的sql打印出来，在开发或测试的时候可以用
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   #配置扫描xml
-
-=======
 
   #在application.yml中配置fastdfs的连接地址等信息
 
@@ -39,4 +39,3 @@ fdfs:
     height: 150
   pool:
     max-total: 200
->>>>>>> 071e5a20c75ca23f6c51d8310e598106fe30ffc6
