--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
             <dependency>
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-boot-starter</artifactId>
-                <version>${redisson.version}</version>
+                <version>3.15.6</version>
             </dependency>
 
         </dependencies>
