--- a/haohuo-service/haohuo-service-post/pom.xml
+++ b/haohuo-service/haohuo-service-post/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.26</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+            <version>1.26.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <artifactId>haohuo-service-post</artifactId>
