--- a/haohuo-gateway-app/src/main/resources/application.properties
+++ b/haohuo-gateway-app/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=26745
 # 服务名称
 spring.application.name=haohuo-gateway
 # Nacos地址
-spring.cloud.nacos.discovery.server-addr=30.16.95.144:8848
+spring.cloud.nacos.discovery.server-addr=30.16.95.140:8848
 # Nacos登录用户名(默认为nacos，生产环境一定要修改)
 spring.cloud.nacos.username=nacos
 # Nacos登录密码(默认为nacos，生产环境一定要修改)
@@ -14,46 +14,46 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # 用户服务的路由配置
-spring.cloud.gateway.routes[0].id=haohuo-user
-spring.cloud.gateway.routes[0].uri=lb://haohuo-user
+spring.cloud.gateway.routes[0].id=user-service
+spring.cloud.gateway.routes[0].uri=lb://user-service
 spring.cloud.gateway.routes[0].order=1
-spring.cloud.gateway.routes[0].predicates[0]=Path=/haohuo-user/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/user-service/**
 
 # 首页接口的路由配置
-spring.cloud.gateway.routes[1].id=recommend-service-route
-spring.cloud.gateway.routes[1].uri=lb://newbee-mall-cloud-recommend-service
+spring.cloud.gateway.routes[1].id=trans-service
+spring.cloud.gateway.routes[1].uri=lb://trans-service
 spring.cloud.gateway.routes[1].order=1
-spring.cloud.gateway.routes[1].predicates[0]=Path=/mall/index/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/trans-service/**
 
 # 分类接口的路由配置
-spring.cloud.gateway.routes[2].id=goods-service-route
-spring.cloud.gateway.routes[2].uri=lb://newbee-mall-cloud-goods-service
+spring.cloud.gateway.routes[2].id=seckill-service
+spring.cloud.gateway.routes[2].uri=lb://seckill-service
 spring.cloud.gateway.routes[2].order=1
-spring.cloud.gateway.routes[2].predicates[0]=Path=/categories/mall/**
+spring.cloud.gateway.routes[2].predicates[0]=Path=/seckill-service/**
 
 # 商品接口的路由配置
-spring.cloud.gateway.routes[3].id=goods-service-route2
-spring.cloud.gateway.routes[3].uri=lb://newbee-mall-cloud-goods-service
+spring.cloud.gateway.routes[3].id=post-service
+spring.cloud.gateway.routes[3].uri=lb://post-service
 spring.cloud.gateway.routes[3].order=1
-spring.cloud.gateway.routes[3].predicates[0]=Path=/goods/mall/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/post-service/**
 
 # 购物车接口的路由配置
-spring.cloud.gateway.routes[4].id=shop-cart-service-route
-spring.cloud.gateway.routes[4].uri=lb://newbee-mall-cloud-shop-cart-service
+spring.cloud.gateway.routes[4].id=order-service
+spring.cloud.gateway.routes[4].uri=lb://order-service
 spring.cloud.gateway.routes[4].order=1
-spring.cloud.gateway.routes[4].predicates[0]=Path=/shop-cart/**
+spring.cloud.gateway.routes[4].predicates[0]=Path=/order-service/**
 
 # 订单接口的路由配置
-spring.cloud.gateway.routes[5].id=order-service-route
-spring.cloud.gateway.routes[5].uri=lb://newbee-mall-cloud-order-service
+spring.cloud.gateway.routes[5].id=game-service
+spring.cloud.gateway.routes[5].uri=lb://game-service
 spring.cloud.gateway.routes[5].order=1
-spring.cloud.gateway.routes[5].predicates[0]=Path=/orders/mall/**
+spring.cloud.gateway.routes[5].predicates[0]=Path=/game-service/**
 
 # 收货地址接口的路由配置
-spring.cloud.gateway.routes[6].id=order-service-route2
-spring.cloud.gateway.routes[6].uri=lb://newbee-mall-cloud-order-service
+spring.cloud.gateway.routes[6].id=common-file-service
+spring.cloud.gateway.routes[6].uri=lb://common-file
 spring.cloud.gateway.routes[6].order=1
-spring.cloud.gateway.routes[6].predicates[0]=Path=/mall/address/**
+spring.cloud.gateway.routes[6].predicates[0]=Path=/common-file/**
 
 # 商品服务Swagger的路由配置
 spring.cloud.gateway.routes[7].id=goods-service-swagger-route
@@ -92,13 +92,13 @@ spring.cloud.gateway.routes[11].filters[0]=StripPrefix=2
 
 ##Redis 配置
 # Redis数据库索引（默认为0）
-spring.redis.database=13
+spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=30.16.95.144
+spring.redis.host=30.16.95.140
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码
-#spring.redis.password=123456789
+spring.redis.password=admin
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.jedis.pool.max-active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
