--- a/haohuo-service/haohuo-service-user/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-user/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   application:
-    name: haohuo-user
+    name: user-service
   cloud:
     nacos:
       discovery:
