--- a/haohuo-service/haohuo-service-post/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-post/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 server:
-  port: 8084
+  port: 10084
 spring:
   application:
     name: post-service
+#在application.yml中配置fastdfs的连接地址等信息
   cloud:
     nacos:
       discovery:
@@ -10,30 +11,12 @@ spring:
         group: 85ab69de-640b-4bb6-b62e-59d4bbcd7d93
       username: nacos
       password: nacos
-  jackson:
-    default-property-inclusion: non_empty
-  servlet:
-    multipart:
-      max-file-size: 5MB
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://30.16.95.144:3306/yizu-duyumeng?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&useSSL=true&serverTimezone=GMT%2B8
-    username: root
-    password: root
-mybatis-plus:
-  mapper-locations: com/ebanma/cloud/post/dao/*.xml
-  configuration:
-    #这个配置会将执行的sql打印出来，在开发或测试的时候可以用
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  #配置扫描xml
-
-  #在application.yml中配置fastdfs的连接地址等信息
-
   # 注意这个trackerList：如果是集群tracker的话以逗号分隔开就行 30.16.95.144
 fdfs:
   connect-timeout: 600
   so-timeout: 1500
   trackerList: 124.221.94.214:22122
+  # 后续删除
   thumb-image:
     width: 150
     height: 150
