--- a/haohuo-service/pom.xml
+++ b/haohuo-service/pom.xml
@@ -31,12 +31,20 @@
             <groupId>com.ebanma.cloud</groupId>
             <artifactId>haohuo-common-db</artifactId>
             <version>1.0-SNAPSHOT</version>
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <groupId>tk.mybatis</groupId>-->
-<!--                    <artifactId>mapper-spring-boot-starter</artifactId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
+            <exclusions>
+                <exclusion>
+                    <artifactId>fastjson</artifactId>
+                    <groupId>com.alibaba</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>mybatis</artifactId>
+                    <groupId>org.mybatis</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>mybatis-spring</artifactId>
+                    <groupId>org.mybatis</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.ebanma.cloud</groupId>
