--- a/haohuo-common-db/src/main/resources/application-dev.properties
+++ b/haohuo-common-db/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://localhost:3306/haohuo?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://30.16.95.144:3306/yizu-duyumeng?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
