--- a/haohuo-service/haohuo-service-user/pom.xml
+++ b/haohuo-service/haohuo-service-user/pom.xml
@@ -11,4 +11,12 @@
 
     <artifactId>haohuo-service-user</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>2.3.2.RELEASE</version>
+        </dependency>
+    </dependencies>
+
 </project>
