--- a/haohuo-common-db/src/main/resources/application-dev.properties
+++ b/haohuo-common-db/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://30.16.95.144:3306/yizu-duyumeng?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://30.16.95.143:3306/banma_project?useSSL=false&useUnicode=true&cahracterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.username =root
+spring.datasource.password =root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
