--- a/haohuo-service/haohuo-service-post/pom.xml
+++ b/haohuo-service/haohuo-service-post/pom.xml
@@ -6,12 +6,8 @@
     <dependencies>
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-extension</artifactId>
-            <version>3.5.2</version>
-            <scope>compile</scope>
-            <exclusions>
-
-            </exclusions>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.3</version>
         </dependency>
         <dependency>
             <groupId>com.github.tobato</groupId>
