--- a/haohuo-service/haohuo-service-game/pom.xml
+++ b/haohuo-service/haohuo-service-game/pom.xml
@@ -29,4 +29,24 @@
 
     <artifactId>haohuo-service-game</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                    <mainClass>com.ebanma.cloud.game.GameServiceApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
