feature: 添加登录等级成长接口，消息中间件需要调试，每天首次登录需要在登录方法判断后再发消息。

--- a/haohuo-service/haohuo-service-user/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-user/src/main/resources/application.yml
@@ -3,6 +3,10 @@ server:
 spring:
   application:
     name: user-service
+rocketmq:
+  name-server: 30.16.96.140:9090
+  producer:
+    group: group1
 logging:
   level:
     com.ebanma.cloud.user.dao: debug
