--- a/haohuo-service/haohuo-service-user/pom.xml
+++ b/haohuo-service/haohuo-service-user/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.ebanma.cloud</groupId>
+            <artifactId>haohuo-service-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
