feature:秒杀基本功能

--- a/haohuo-common-db/pom.xml
+++ b/haohuo-common-db/pom.xml
@@ -82,11 +82,7 @@
 <!--            <artifactId>mapper</artifactId>-->
 <!--            <version>3.4.2</version>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>4.2.1</version>
-        </dependency>
+
         <!--阿里 FastJson依赖-->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -116,6 +112,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.2.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
