feature:秒杀基本功能

--- a/haohuo-service/haohuo-service-seckill/src/main/resources/application.properties
+++ b/haohuo-service/haohuo-service-seckill/src/main/resources/application.properties
@@ -39,6 +39,34 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 # 消费端监听的topic不存在时，项目启动会报错(关掉)
 spring.kafka.listener.missing-topics-fatal=false
 # 设置批量消费
-# spring.kafka.listener.type=batch
+ spring.kafka.listener.type=batch
 # 批量消费每次最多消费多少条消息
-# spring.kafka.consumer.max-poll-records=50
+ spring.kafka.consumer.max-poll-records=50
+
+##Redis 配置
+# Redis数据库索引（默认为0）
+spring.redis.database=13
+# Redis服务器地址
+spring.redis.host=30.16.95.140
+#spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码
+spring.redis.password=admin
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=300
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=10000
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=200
+# 连接超时时间（毫秒）
+spring.redis.timeout=5000
+
+#最大连接数
+server.tomcat.max-connections=2000
+#最大线程数
+server.tomcat.max-threads=1000
+#最大等待数
+server.tomcat.accept-count=800
