--- a/haohuo-service/haohuo-service-order/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-order/src/main/resources/application.yml
@@ -22,6 +22,9 @@ spring:
     database: 1
 #    cluster:
 #      nodes: 30.16.95.140:6379
+  main:
+    #允许存在多个Feign调用相同Service的接口
+    allow-bean-definition-overriding: true
 mybatis-plus:
   mapper-locations: classpath:/mapper/*.xml
   configuration:
@@ -34,13 +37,13 @@ alipay:
 
 
 
-#rocketmq:
-##  rocketmq的命名服务器，格式为 host:port;host:port
-#  name-server: 30.16.95.140:9090
-#  producer:
-##    生产者组名
-#    group: hgl-order
-##    发送消息超时时间
-#    send-message-timeout: 3000
+rocketmq:
+#  rocketmq的命名服务器，格式为 host:port;host:port
+  name-server: 30.16.95.140:9876
+  producer:
+#    生产者组名
+    group: hgl-order
+#    发送消息超时时间
+    send-message-timeout: 3000
 
 
