--- a/haohuo-service/haohuo-service-mall/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-mall/src/main/resources/application.yml
@@ -10,6 +10,12 @@ spring:
         namespace: 7bdad1e8-52f0-4905-814a-d413d6d819e5
       username: nacos
       password: nacos
+  redis:
+    host: 30.16.95.140
+    #    host: 127.0.0.1
+    port: 6379
+    password: admin
+    database: 1
 mybatis-plus:
   mapper-locations: classpath:/mapper/*.xml
   configuration:
