--- a/haohuo-gateway-app/src/main/resources/application.properties
+++ b/haohuo-gateway-app/src/main/resources/application.properties
@@ -55,6 +55,43 @@ spring.cloud.gateway.routes[6].uri=lb://common-file
 spring.cloud.gateway.routes[6].order=1
 spring.cloud.gateway.routes[6].predicates[0]=Path=/common/**
 
+# 商品接口的路由配置
+spring.cloud.gateway.routes[23].id=mall-servicex
+spring.cloud.gateway.routes[23].uri=lb://mall-service
+spring.cloud.gateway.routes[23].order=1
+spring.cloud.gateway.routes[23].predicates[0]=Path=/product/**
+
+spring.cloud.gateway.routes[12].id=mall-servicex12
+spring.cloud.gateway.routes[12].uri=lb://mall-service
+spring.cloud.gateway.routes[12].order=1
+spring.cloud.gateway.routes[12].predicates[0]=Path=/inventory/**
+
+spring.cloud.gateway.routes[13].id=mall-servicex13
+spring.cloud.gateway.routes[13].uri=lb://mall-service
+spring.cloud.gateway.routes[13].order=1
+spring.cloud.gateway.routes[13].predicates[0]=Path=/sku/**
+
+spring.cloud.gateway.routes[14].id=mall-servicex14
+spring.cloud.gateway.routes[14].uri=lb://mall-service
+spring.cloud.gateway.routes[14].order=1
+spring.cloud.gateway.routes[14].predicates[0]=Path=/record/**
+
+spring.cloud.gateway.routes[15].id=mall-servicex15
+spring.cloud.gateway.routes[15].uri=lb://mall-service
+spring.cloud.gateway.routes[15].order=1
+spring.cloud.gateway.routes[15].predicates[0]=Path=/category/**
+
+spring.cloud.gateway.routes[16].id=mall-servicex16
+spring.cloud.gateway.routes[16].uri=lb://mall-service
+spring.cloud.gateway.routes[16].order=1
+spring.cloud.gateway.routes[16].predicates[0]=Path=/file/**
+
+spring.cloud.gateway.routes[17].id=mall-servicex17
+spring.cloud.gateway.routes[17].uri=lb://mall-service
+spring.cloud.gateway.routes[17].order=1
+spring.cloud.gateway.routes[17].predicates[0]=Path=/store/**
+
+
 # 商品服务Swagger的路由配置
 spring.cloud.gateway.routes[7].id=goods-service-swagger-route
 spring.cloud.gateway.routes[7].uri=lb://newbee-mall-cloud-goods-service
