--- a/haohuo-gateway-app/src/main/resources/application.properties
+++ b/haohuo-gateway-app/src/main/resources/application.properties
@@ -56,10 +56,10 @@ spring.cloud.gateway.routes[6].order=1
 spring.cloud.gateway.routes[6].predicates[0]=Path=/common/**
 
 # 商品接口的路由配置
-spring.cloud.gateway.routes[23].id=mall-servicex
-spring.cloud.gateway.routes[23].uri=lb://mall-service
-spring.cloud.gateway.routes[23].order=1
-spring.cloud.gateway.routes[23].predicates[0]=Path=/product/**
+#spring.cloud.gateway.routes[23].id=mall-servicex
+#spring.cloud.gateway.routes[23].uri=lb://mall-service
+#spring.cloud.gateway.routes[23].order=1
+#spring.cloud.gateway.routes[23].predicates[0]=Path=/product/**
 
 spring.cloud.gateway.routes[12].id=mall-servicex12
 spring.cloud.gateway.routes[12].uri=lb://mall-service
