feature:游戏模块-RocketMQ异步发奖

--- a/haohuo-service/haohuo-service-game/src/main/resources/application.yml
+++ b/haohuo-service/haohuo-service-game/src/main/resources/application.yml
@@ -37,6 +37,11 @@ spring:
 mybatis:
   mapper-locations: mapper/*.xml
 
+rocketmq:
+  name-server: 30.16.95.140:9876
+  producer:
+    group: trans-group
+
 logging:
   level:
     com.ebanma.cloud.game.dao: debug
