--- a/haohuo-service/haohuo-service-trans/pom.xml
+++ b/haohuo-service/haohuo-service-trans/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>2.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.0.3</version>
+        </dependency>
     </dependencies>
 
     <build>
